--- a/garden-shop/dev/components/header/header.html
+++ b/garden-shop/dev/components/header/header.html
@@ -30,14 +30,7 @@
 	<div class="body-wrapper">
 		<header class="header">
 			<div class="header__line">
-				<div class="header__line-logo">
-					<img src="./images/header-line-logo.svg" alt="logo">
-				</div>
-				<div class="header__line-discount">-10%</div>
-				<div class="header__line-text">Минитрактор Shifeng SF-240В</div>
-				<div class="header__line-img">
-					<img src="./images/header-line-img.png" alt="img">
-				</div>
+				<img src="../../images/top-banner.png" alt="img">
 			</div>
 			<div class="container">
 				<div class="header__wrapper">
