--- a/garden-shop/dev/style/scss/main.scss
+++ b/garden-shop/dev/style/scss/main.scss
@@ -533,6 +533,7 @@ body {
 	background-image: url(../images/icons/rating-empty.svg);
 	background-repeat: no-repeat;
 	background-position: center;
+	background-size: auto 100%;
 	width: 96px;
 	height: 16px;
 	position: relative;
@@ -540,6 +541,8 @@ body {
 		background-image: url(../images/icons/rating-full.svg);
 		background-repeat: no-repeat;
 		background-position: center left;
+		background-size: auto 100%;
+
 		position: absolute;
 		height: 100%;
 	}
@@ -775,6 +778,17 @@ body {
 				background-color: #e25b26;
 			}
 		}
+	}
+}
+
+.slider-scrollbar {
+	width: 100%;
+	height: 5px;
+	background: #f7f8fb;
+	border-radius: 5px;
+	margin-top: 20px;
+	& .swiper-scrollbar-drag {
+		background: #c9c8d3;
 	}
 }
 
