--- a/garden-shop/release/components/header/header.css
+++ b/garden-shop/release/components/header/header.css
@@ -11,23 +11,16 @@
   margin-top: -60px;
 }
 .header__line {
-  display: flex;
-  background: #f7f8fb;
-  justify-content: center;
-  align-items: center;
-  gap: 40px;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 120%;
-  height: 60px;
   overflow: hidden;
   transition: all ease 0.5s;
+  display: flex;
+  justify-content: center;
+  background: #f7f8fb;
+  height: 60px;
 }
-.header__line-discount {
-  color: #124144;
-}
-.header__line-logo {
-  object-fit: contain;
+.header__line img {
+  object-fit: cover;
+  height: 60px;
 }
 .header__link {
   display: flex;
