--- a/garden-shop/release/components/text-block/text-block.html
+++ b/garden-shop/release/components/text-block/text-block.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="text-block__wrapper">
             <div class="read-more">
-                <div class="read-more__text" style="height: 130px;">
+                <div class="read-more__text" style="max-height: 180px;">
                     <h2>Область применения</h2>
                     <p>
                         Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более
