--- a/garden-shop/release/css/style-result.css
+++ b/garden-shop/release/css/style-result.css
@@ -618,6 +618,7 @@ body {
   background-image: url(../images/icons/rating-empty.svg);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: auto 100%;
   width: 96px;
   height: 16px;
   position: relative;
@@ -627,6 +628,7 @@ body {
   background-image: url(../images/icons/rating-full.svg);
   background-repeat: no-repeat;
   background-position: center left;
+  background-size: auto 100%;
   position: absolute;
   height: 100%;
 }
@@ -883,6 +885,18 @@ body {
   left: 0;
   top: 9px;
   background-color: #e25b26;
+}
+
+.slider-scrollbar {
+  width: 100%;
+  height: 5px;
+  background: #f7f8fb;
+  border-radius: 5px;
+  margin-top: 20px;
+}
+
+.slider-scrollbar .swiper-scrollbar-drag {
+  background: #c9c8d3;
 }
 
 .advantages__wrapper {
@@ -1572,6 +1586,80 @@ body {
   position: static;
 }
 
+.detail-block__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.detail-block__title {
+  margin-bottom: 0;
+}
+
+.detail-block__subheader {
+  display: flex;
+  gap: 20px;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+.detail-block__subheader-info {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.detail-block__rating {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.detail-block__tag {
+  background: #f7f8fb;
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.detail-block__tags {
+  display: flex;
+  gap: 5px;
+}
+
+.detail-block__wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 30px;
+}
+
+.detail-block__panel {
+  grid-column: span 2;
+}
+
+.detail-block__order {
+  grid-row: span 2;
+}
+
+.detail-block__slider {
+  max-width: 390px;
+  height: 390px;
+  position: static;
+}
+
+.detail-block__slide img {
+  width: 100%;
+  height: 100%;
+  -o-object-position: center;
+  object-position: center;
+  -o-object-fit: contain;
+  object-fit: contain;
+}
+
+.detail-block__gallery {
+  position: relative;
+}
+
 .footer {
   background: #f7f8fb;
 }
@@ -1697,26 +1785,18 @@ body {
 }
 
 .header__line {
-  display: flex;
-  background: #f7f8fb;
-  justify-content: center;
-  align-items: center;
-  gap: 40px;
-  font-weight: 600;
-  font-size: 18px;
-  line-height: 120%;
-  height: 60px;
   overflow: hidden;
   transition: all ease 0.5s;
+  display: flex;
+  justify-content: center;
+  background: #f7f8fb;
+  height: 60px;
 }
 
-.header__line-discount {
-  color: #124144;
-}
-
-.header__line-logo {
-  -o-object-fit: contain;
-  object-fit: contain;
+.header__line img {
+  -o-object-fit: cover;
+  object-fit: cover;
+  height: 60px;
 }
 
 .header__link {
@@ -2044,6 +2124,297 @@ body {
   align-items: center;
 }
 
+.partners__slide {
+  background: #f7f8fb;
+  border: 1px solid #ebebeb;
+  border-radius: 5px;
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.partners__slider {
+  position: static;
+}
+
+.partners__slider-container {
+  position: relative;
+}
+
+.sidebar__list {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.sidebar__link {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+}
+
+.sidebar__link-icon {
+  display: block;
+  width: 24px;
+  height: 22px;
+}
+
+.tab-slider {
+  position: relative;
+}
+
+.tab-slider__container {
+  position: static;
+}
+
+.review__rating {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.review__rating-stars {
+  height: 32px;
+  width: 192px;
+}
+
+.review__header {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 40px;
+}
+
+.review__slider {
+  position: static;
+}
+
+.review__slider-container {
+  position: relative;
+}
+
+.review__slide {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.review-card {
+  padding: 20px;
+  border: 1.5px solid #ebebeb;
+  border-radius: 5px;
+  width: 400px;
+  min-height: 420px;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.review-card__header {
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.review-card__rating {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.review-card__info-text {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.review-card__desc-title {
+  margin-bottom: 5px;
+}
+
+.review-card__controls {
+  display: flex;
+  margin-top: auto;
+}
+
+.review-card .read-more__text {
+  overflow-y: auto;
+  padding-bottom: 1px;
+}
+
+.review-card .read-more__text::-webkit-scrollbar {
+  width: 5px;
+  background: #c9c8d3;
+  border-radius: 5px;
+}
+
+.review-card .read-more__text::-webkit-scrollbar-thumb {
+  background: #8a8894;
+  border-radius: 5px;
+}
+
+.review-card .read-more__text::after {
+  display: none;
+}
+
+.tags {
+  margin-bottom: 40px;
+}
+
+.tags__wrapper {
+  display: flex;
+  gap: 10px;
+  position: relative;
+  max-height: 33px;
+  overflow: hidden;
+}
+
+.tags__item {
+  background: #f7f8fb;
+  border-radius: 5px;
+  padding: 5px 10px;
+  white-space: nowrap;
+}
+
+.tags__btn {
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding-right: 30px;
+}
+
+.tags__btn::before {
+  display: block;
+  content: "";
+  height: 100%;
+  width: 80px;
+  position: absolute;
+  right: 100%;
+  top: 0;
+  background: linear-gradient(270deg, #ffffff 20%, rgba(255, 255, 255, 0) 100%);
+}
+
+.tags__btn::after {
+  display: block;
+  content: "";
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url(../../images/icons/Chevron_Right.svg);
+}
+
+.tags_open .tags__btn {
+  position: relative;
+}
+
+.tags_open .tags__btn::before {
+  display: none;
+}
+
+.tags_open .tags__btn::after {
+  transform: translateY(-50%) rotate(-90deg);
+}
+
+.tags_open .tags__wrapper {
+  max-height: none;
+  flex-wrap: wrap;
+}
+
+.table-info__header {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  margin-bottom: 40px;
+}
+
+.table-info__btn {
+  padding-left: 24px;
+  background-position: center left;
+  background-repeat: no-repeat;
+  background-size: 16px;
+  background-image: url(../images/icons/product_card\ -\ compare.svg);
+  cursor: pointer;
+}
+
+.table-info__title {
+  margin-bottom: 0;
+}
+
+.table-info__subtitle {
+  margin-bottom: 20px;
+}
+
+.table-info__wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.table-info__row {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  gap: 20px;
+  position: relative;
+  z-index: 1;
+  margin-bottom: 20px;
+}
+
+.table-info__row:last-child {
+  margin-bottom: 0;
+}
+
+.table-info__row::after {
+  display: block;
+  content: "";
+  width: 100%;
+  height: 18px;
+  position: absolute;
+  bottom: 5px;
+  left: 0;
+  background-image: url(../images/icons/doted-line.svg);
+  background-position: center;
+  background-size: contain;
+  z-index: -1;
+}
+
+.table-info__list {
+  -moz-column-count: 2;
+  column-count: 2;
+  gap: 60px;
+}
+
+.table-info__key {
+  max-width: 230px;
+  width: 100%;
+}
+
+.table-info__key-text {
+  background-color: #fff;
+  display: inline;
+}
+
+.table-info__value {
+  background-color: #fff;
+  width: 240px;
+}
+
+.text-block__wrapper {
+  max-width: 1010px;
+}
+
 .home-slider {
   width: 100%;
 }
@@ -2222,126 +2593,6 @@ body {
   z-index: 3;
 }
 
-.partners__slide {
-  background: #f7f8fb;
-  border: 1px solid #ebebeb;
-  border-radius: 5px;
-  padding: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: -moz-fit-content;
-  width: fit-content;
-}
-
-.partners__slider {
-  position: static;
-}
-
-.partners__slider-container {
-  position: relative;
-}
-
-.sidebar__list {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-
-.sidebar__link {
-  display: flex;
-  gap: 15px;
-  align-items: center;
-}
-
-.sidebar__link-icon {
-  display: block;
-  width: 24px;
-  height: 22px;
-}
-
-.tab-slider {
-  position: relative;
-}
-
-.tab-slider__container {
-  position: static;
-}
-
-.tags {
-  margin-bottom: 40px;
-}
-
-.tags__wrapper {
-  display: flex;
-  gap: 10px;
-  position: relative;
-  max-height: 33px;
-  overflow: hidden;
-}
-
-.tags__item {
-  background: #f7f8fb;
-  border-radius: 5px;
-  padding: 5px 10px;
-  white-space: nowrap;
-}
-
-.tags__btn {
-  cursor: pointer;
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding-right: 30px;
-}
-
-.tags__btn::before {
-  display: block;
-  content: "";
-  height: 100%;
-  width: 80px;
-  position: absolute;
-  right: 100%;
-  top: 0;
-  background: linear-gradient(270deg, #ffffff 20%, rgba(255, 255, 255, 0) 100%);
-}
-
-.tags__btn::after {
-  display: block;
-  content: "";
-  width: 16px;
-  height: 16px;
-  position: absolute;
-  top: 50%;
-  right: 10px;
-  transform: translateY(-50%);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-image: url(../../images/icons/Chevron_Right.svg);
-}
-
-.tags_open .tags__btn {
-  position: relative;
-}
-
-.tags_open .tags__btn::before {
-  display: none;
-}
-
-.tags_open .tags__btn::after {
-  transform: translateY(-50%) rotate(-90deg);
-}
-
-.tags_open .tags__wrapper {
-  max-height: none;
-  flex-wrap: wrap;
-}
-
-.text-block__wrapper {
-  max-width: 1010px;
-}
-
 @media (min-width: 768px) {
   .card_kit .card__mid {
     flex-direction: column-reverse;
@@ -2388,6 +2639,11 @@ body {
 }
 
 @media (max-width: 1200px) {
+  .table-info__list {
+    -moz-column-count: 1;
+    column-count: 1;
+  }
+
   .line-form__item {
     flex-direction: column;
     align-items: flex-start;
@@ -2858,6 +3114,12 @@ body {
     padding: 9px 10px;
   }
 
+  .table-info__header {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+
   .line-form__item {
     padding: 15px;
   }
@@ -3064,6 +3326,26 @@ body {
   .header__nav-links {
     font-size: 12px;
     line-height: 130%;
+  }
+
+  .review__header {
+    flex-direction: column;
+    gap: 10px;
+    align-items: flex-start;
+  }
+
+  .review__btn {
+    width: 100%;
+  }
+
+  .review__rating-stars {
+    width: 96px;
+    height: 16px;
+  }
+
+  .review-card {
+    width: 100%;
+    min-height: 0;
   }
 
   .home-slider__container {
