--- a/garden-shop/dev/components/card/card.html
+++ b/garden-shop/dev/components/card/card.html
@@ -49,7 +49,7 @@
             </div>
             <div class="card__rating-num caption">8</div>
         </div>
-        <div class="card__state card__state_false caption-large">В наличии</div>
+        <div class="card__state card-state card-state_false caption-large">В наличии</div>
     </div>
     <div class="card__bot">
         <div class="card__price-wrapper">
