--- a/garden-shop/dev/components/catalog/catalog.html
+++ b/garden-shop/dev/components/catalog/catalog.html
@@ -233,7 +233,7 @@
                                     </div>
                                     <div class="card__rating-num caption">8</div>
                                 </div>
-                                <div class="card__state card__state_false caption-large">В наличии</div>
+                                <div class="card__state card-state card-state_false caption-large">В наличии</div>
                             </div>
                             <div class="card__main-hash-list gray-text caption">
                                 <div class="card__main-hash">Всем скидки и бонусы!</div>
