--- a/garden-shop/dev/components/table-info/table-info.html
+++ b/garden-shop/dev/components/table-info/table-info.html
@@ -1,4 +1,4 @@
-<section class="section table-info">
+<section class="section table-info" id="specification">
     <div class="container">
         <div class="table-info__header">
             <div class="table-info__title title">@@title</div>
