--- a/garden-shop/dev/components/table-info/table-info.scss
+++ b/garden-shop/dev/components/table-info/table-info.scss
@@ -60,10 +60,12 @@
     &__key-text {
         background-color: #fff;
         display: inline;
+        padding-right: 5px;
     }
     &__value {
         background-color: #fff;
         width: 240px;
+        padding-left: 5px;
     }
 }
 
