--- a/garden-shop/dev/components/default-slider/default-slider.html
+++ b/garden-shop/dev/components/default-slider/default-slider.html
@@ -20,7 +20,7 @@
                                 </div>
                                 <div class="card__rating-num caption">8</div>
                             </div>
-                            <div class="card__state caption-large">В наличии</div>
+                            <div class="card__state card-state caption-large">В наличии</div>
                         </div>
                         <div class="card__bot">
                             <div class="card__price-wrapper">
@@ -71,7 +71,7 @@
                                 </div>
                                 <div class="card__rating-num caption">8</div>
                             </div>
-                            <div class="card__state card__state_false caption-large">Нет в наличии</div>
+                            <div class="card__state card-state card-state_false caption-large">Нет в наличии</div>
                         </div>
                         <div class="card__bot">
                             <div class="card__price-wrapper">
@@ -139,7 +139,7 @@
                                 </div>
                                 <div class="card__rating-num caption">8</div>
                             </div>
-                            <div class="card__state card__state_false caption-large">В наличии</div>
+                            <div class="card__state card-state card-state_false caption-large">В наличии</div>
                         </div>
                         <div class="card__bot">
                             <div class="card__price-wrapper">
@@ -172,7 +172,7 @@
                                 </div>
                                 <div class="card__rating-num caption">8</div>
                             </div>
-                            <div class="card__state card__state_false caption-large">В наличии</div>
+                            <div class="card__state card-state card-state_false caption-large">В наличии</div>
                         </div>
                         <div class="card__bot">
                             <div class="card__price-wrapper">
@@ -205,7 +205,7 @@
                                 </div>
                                 <div class="card__rating-num caption">8</div>
                             </div>
-                            <div class="card__state card__state_false caption-large">В наличии</div>
+                            <div class="card__state card-state card-state_false caption-large">В наличии</div>
                         </div>
                         <div class="card__bot">
                             <div class="card__price-wrapper">
@@ -300,7 +300,8 @@
                                                 </div>
                                                 <div class="card__rating-num caption">8</div>
                                             </div>
-                                            <div class="card__state card__state_false caption-large">В наличии</div>
+                                            <div class="card__state card-state card-state_false caption-large">В наличии
+                                            </div>
                                         </div>
                                         <div class="card__bot">
                                             <div class="card__price-wrapper">
