--- a/garden-shop/dev/components/detail-block/detail-block.scss
+++ b/garden-shop/dev/components/detail-block/detail-block.scss
@@ -45,9 +45,12 @@
         grid-row: span 2;
     }
     &__slider {
-        max-width: 390px;
+        max-width: 490px;
         height: 390px;
-        position: static;
+        position: sticky;
+        top: 156px;
+        padding: 0 50px;
+        padding-bottom: 30px;
     }
     &__slide {
         & img {
@@ -57,7 +60,142 @@
             object-fit: contain;
         }
     }
-    &__gallery {
+
+    &__row {
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
         position: relative;
+        z-index: 1;
+        &::after {
+            display: block;
+            content: "";
+            width: 100%;
+            height: 18px;
+            bottom: 3px;
+            left: 0;
+            background-image: url(../images/icons/doted-line.svg);
+            background-position: center;
+            background-size: contain;
+            position: absolute;
+            z-index: -1;
+        }
+    }
+    &__row-value {
+        text-align: right;
+        background-color: #fff;
+        padding-left: 5px;
+    }
+    &__row-key {
+        background-color: #fff;
+        padding-right: 5px;
+    }
+    &__specification {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        margin-bottom: 10px;
+    }
+    &__subtitle {
+        margin-bottom: 10px;
+    }
+    &__body-item {
+        margin-bottom: 40px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+    &__price {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
+    &__current-price {
+        margin-bottom: 0;
+    }
+    &__old-price {
+        text-decoration: line-through;
+    }
+    &__order {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+    }
+    &__order-top {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+    &__order-info {
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        text-align: right;
+    }
+    &__icon-item {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+    }
+    &__icons {
+        display: flex;
+        gap: 10px;
+        margin-top: 10px;
+    }
+    &__btns {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+    &__btn {
+        width: 100%;
+        height: 50px;
+    }
+    &__login {
+        display: flex;
+        padding: 15px 20px;
+        padding-right: 90px;
+        background-image: url(../../images/icons/login-discount.svg);
+        background-position: right center;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-color: #f7f8fb;
+        border-radius: 5px;
+    }
+    &__info-list {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+    &__hash {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        padding: 6px 5px;
+        background: #f7f8fb;
+        border-radius: 5px;
+    }
+    &__hash-list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 5px;
+    }
+    &__stickers {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+    &__sticker {
+        padding: 5px 10px;
+        background: #fdefea;
+        border-radius: 5px;
+        width: fit-content;
+        &_green {
+            background: #e8eced;
+        }
     }
 }
