--- a/garden-shop/release/components/detail-block/detail-block.css
+++ b/garden-shop/release/components/detail-block/detail-block.css
@@ -44,9 +44,12 @@
   grid-row: span 2;
 }
 .detail-block__slider {
-  max-width: 390px;
+  max-width: 490px;
   height: 390px;
-  position: static;
+  position: sticky;
+  top: 156px;
+  padding: 0 50px;
+  padding-bottom: 30px;
 }
 .detail-block__slide img {
   width: 100%;
@@ -54,6 +57,140 @@
   object-position: center;
   object-fit: contain;
 }
-.detail-block__gallery {
+.detail-block__row {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
   position: relative;
+  z-index: 1;
+}
+.detail-block__row::after {
+  display: block;
+  content: "";
+  width: 100%;
+  height: 18px;
+  bottom: 3px;
+  left: 0;
+  background-image: url(../images/icons/doted-line.svg);
+  background-position: center;
+  background-size: contain;
+  position: absolute;
+  z-index: -1;
+}
+.detail-block__row-value {
+  text-align: right;
+  background-color: #fff;
+  padding-left: 5px;
+}
+.detail-block__row-key {
+  background-color: #fff;
+  padding-right: 5px;
+}
+.detail-block__specification {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin-bottom: 10px;
+}
+.detail-block__subtitle {
+  margin-bottom: 10px;
+}
+.detail-block__body-item {
+  margin-bottom: 40px;
+}
+.detail-block__body-item:last-child {
+  margin-bottom: 0;
+}
+.detail-block__price {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.detail-block__current-price {
+  margin-bottom: 0;
+}
+.detail-block__old-price {
+  text-decoration: line-through;
+}
+.detail-block__order {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+.detail-block__order-top {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+.detail-block__order-info {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  text-align: right;
+}
+.detail-block__icon-item {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+.detail-block__icons {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+.detail-block__btns {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.detail-block__btn {
+  width: 100%;
+  height: 50px;
+}
+.detail-block__login {
+  display: flex;
+  padding: 15px 20px;
+  padding-right: 90px;
+  background-image: url(../../images/icons/login-discount.svg);
+  background-position: right center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: #f7f8fb;
+  border-radius: 5px;
+}
+.detail-block__info-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.detail-block__hash {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 6px 5px;
+  background: #f7f8fb;
+  border-radius: 5px;
+}
+.detail-block__hash-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+.detail-block__stickers {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.detail-block__sticker {
+  padding: 5px 10px;
+  background: #fdefea;
+  border-radius: 5px;
+  width: fit-content;
+}
+.detail-block__sticker_green {
+  background: #e8eced;
 }
