--- a/garden-shop/dev/components/additional/additional.html
+++ b/garden-shop/dev/components/additional/additional.html
@@ -634,11 +634,13 @@
                     </label>
                 </div>
                 <div class="additional__price">
-                    <div class="additional__price-text">
-                        Общая сумма
-                    </div>
-                    <div class="additional__current-price title">
-                        449 900 ₽
+                    <div class="additional__current-price">
+                        <div class="additional__price-text">
+                            Общая сумма
+                        </div>
+                        <div class="additional__price-num title">
+                            449 900 ₽
+                        </div>
                     </div>
                     <div class="additional__profit gray-text caption-large">
                         Ваша выгода: <br>
