--- a/garden-shop/dev/components/additional/additional.scss
+++ b/garden-shop/dev/components/additional/additional.scss
@@ -13,8 +13,15 @@
         align-items: center;
         margin-top: 30px;
     }
-    &__current-price {
+    &__price-num {
         margin-bottom: 0;
+    }
+    &__current-price {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        gap: 20px;
+        row-gap: 5px;
     }
     &__btn {
         width: 100%;
@@ -29,6 +36,7 @@
         border-radius: 5px;
         padding: 20px;
         display: block;
+        cursor: pointer;
     }
     &__service-list {
         max-height: 375px;
@@ -36,15 +44,24 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
+        padding-right: 10px;
         &::-webkit-scrollbar {
             width: 5px;
-            background: #c9c8d3;
             border-radius: 5px;
+            background: #c9c8d3;
         }
         &::-webkit-scrollbar-thumb {
             background: #8a8894;
             border-radius: 5px;
+            width: 5px;
         }
+    }
+    &__service {
+        width: 100%;
+        max-width: 460px;
+    }
+    &__profit {
+        min-width: 94px;
     }
     & .tab {
         &__header {
@@ -59,6 +76,7 @@
             color: #000000;
             position: relative;
             width: 100%;
+            max-width: 326px;
             &::after {
                 display: block;
                 content: "";
@@ -80,5 +98,19 @@
     }
     & .card {
         width: 326px;
+    }
+}
+
+@media (max-width: 1400px) {
+    .additional {
+        &__wrapper {
+            flex-direction: column;
+        }
+        &__types {
+            max-width: none;
+        }
+        &__service {
+            max-width: none;
+        }
     }
 }
