--- a/garden-shop/dev/style/scss/main.scss
+++ b/garden-shop/dev/style/scss/main.scss
@@ -20,7 +20,7 @@ body {
 	font-weight: 600;
 	font-size: 28px;
 	line-height: 40px;
-	color: #3f3f3f;
+	color: #212121;
 	margin-bottom: 30px;
 }
 
@@ -356,6 +356,10 @@ body {
 
 // styles
 
+.body-wrapper {
+	overflow-x: clip;
+}
+
 .container {
 	width: 1560px;
 	max-width: 100%;
@@ -529,6 +533,10 @@ body {
 	&_outside {
 		left: -50px;
 		width: calc(100% + 100px);
+	}
+	& .swiper-button-disabled {
+		opacity: 0.5;
+		cursor: default;
 	}
 }
 
@@ -815,18 +823,99 @@ body {
 	display: flex;
 	justify-content: space-between;
 	gap: 20px;
+	position: relative;
+	padding-left: 34px;
 	&__btn {
 		width: 24px;
 		height: 24px;
-		background-image: url(../../images/icons/Info.svg);
-		background-position: center;
-		background-repeat: no-repeat;
-		background-size: contain;
+		mask-image: url(../images/icons/Info.svg);
+		mask-position: center;
+		mask-repeat: no-repeat;
+		mask-size: contain;
+		background-color: #c9c8d3;
+		cursor: pointer;
+		&_close {
+			mask-image: url(../images/icons/Close_MD.svg);
+			background-color: #303030;
+			position: absolute;
+			top: 15px;
+			right: 15px;
+		}
 	}
-	&__text {
-		display: flex;
-		align-items: center;
-		gap: 10px;
+	&__icon {
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 24px;
+		height: 24px;
+	}
+	&__popup {
+		position: absolute;
+		bottom: 100%;
+		right: 0;
+		width: 100%;
+		max-width: 400px;
+		padding: 15px;
+		background: #ffffff;
+		border: 1px solid #ebebeb;
+		border-radius: 5px;
+		transition: all ease 0.5s;
+		opacity: 0;
+		pointer-events: none;
+	}
+	&__popup-title {
+		margin-bottom: 15px;
+	}
+	&__text a {
+		text-decoration: underline;
+	}
+	&_open {
+		& .info-item {
+			&__popup {
+				opacity: 1;
+				pointer-events: all;
+			}
+		}
+	}
+}
+
+.specification-row {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-end;
+	gap: 20px;
+	position: relative;
+	z-index: 1;
+	&:last-child {
+		margin-bottom: 0;
+	}
+	&::after {
+		display: block;
+		content: "";
+		width: 100%;
+		height: 18px;
+		position: absolute;
+		bottom: 5px;
+		left: 0;
+		background-image: url(../images/icons/doted-line.svg);
+		background-position: center;
+		background-size: contain;
+		z-index: -1;
+	}
+	&__key {
+		max-width: 230px;
+		width: 100%;
+		padding-right: 5px;
+	}
+	&__key-text,
+	&__value-text {
+		background-color: #fff;
+		display: inline;
+	}
+	&__value {
+		background-color: #fff;
+		width: 240px;
+		padding-left: 5px;
 	}
 }
 
