--- a/garden-shop/release/components/detail-block/detail-block.html
+++ b/garden-shop/release/components/detail-block/detail-block.html
@@ -20,6 +20,9 @@
                 <div class="detail-block__tag">Всем скидки и бонусы!</div>
                 <div class="detail-block__tag">-10 % на бренд Shifeng</div>
                 <div class="detail-block__tag">Весенняя распродажа</div>
+                <div class="detail-block__tag">Весенняя распродажа</div>
+                <div class="detail-block__tag">Весенняя распродажа</div>
+                <div class="detail-block__tag">Весенняя распродажа</div>
             </div>
         </div>
         <div class="detail-block__wrapper">
@@ -47,50 +50,71 @@
             </div>
             <div class="detail-block__body">
                 <div class="read-more">
-                    <div class="read-more__text" style="max-height: 695px;">
+                    <div class="read-more__text" style="max-height: 665px;">
                         <div class="detail-block__body-item">
                             <div class="detail-block__subtitle orange-text">Основные характеристики:</div>
                             <div class="detail-block__specification">
-                                <div class="detail-block__row">
-                                    <div class="detail-block__row-key">
-                                        Страна происхождения:
+                                <div class="detail-block__row specification-row">
+                                    <div class="specification-row__key">
+                                        <div class="specification-row__key-text">
+                                            Страна происхождения:
+                                        </div>
                                     </div>
-                                    <div class="detail-block__row-value">
-                                        Китай
-                                    </div>
-                                </div>
-                                <div class="detail-block__row">
-                                    <div class="detail-block__row-key">
-                                        Страна сборки:
-                                    </div>
-                                    <div class="detail-block__row-value">
-                                        Россия
+                                    <div class="specification-row__value">
+                                        <div class="specification-row__value-text">
+                                            Китай
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="detail-block__row">
-                                    <div class="detail-block__row-key">
-                                        Тип коробки передач:
+                                <div class="detail-block__row specification-row">
+                                    <div class="specification-row__key">
+                                        <div class="specification-row__key-text">
+                                            Страна сборки:
+                                        </div>
                                     </div>
-                                    <div class="detail-block__row-value">
-                                        Механическая КПП
-                                    </div>
-                                </div>
-                                <div class="detail-block__row">
-                                    <div class="detail-block__row-key">
-                                        Габаритные размеры, мм:
-                                    </div>
-                                    <div class="detail-block__row-value">
-                                        2860 х 1470 х 1400
+                                    <div class="specification-row__value">
+                                        <div class="specification-row__value-text">
+                                            Россия
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="detail-block__row">
-                                    <div class="detail-block__row-key">
-                                        Объем топливного бака, л:
+                                <div class="detail-block__row specification-row">
+                                    <div class="specification-row__key">
+                                        <div class="specification-row__key-text">
+                                            Тип коробки передач:
+                                        </div>
                                     </div>
-                                    <div class="detail-block__row-value">
-                                        10
+                                    <div class="specification-row__value">
+                                        <div class="specification-row__value-text">
+                                            Механическая КПП
+                                        </div>
                                     </div>
                                 </div>
+                                <div class="detail-block__row specification-row">
+                                    <div class="specification-row__key">
+                                        <div class="specification-row__key-text">
+                                            Габаритные размеры, мм:
+                                        </div>
+                                    </div>
+                                    <div class="specification-row__value">
+                                        <div class="specification-row__value-text">
+                                            2860 х 1470 х 1400
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="detail-block__row specification-row">
+                                    <div class="specification-row__key">
+                                        <div class="specification-row__key-text">
+                                            Объем топливного бака, л:
+                                        </div>
+                                    </div>
+                                    <div class="specification-row__value">
+                                        <div class="specification-row__value-text">
+                                            10
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
                             <a href="#specification" class="anchor demibold green-text">Все характеристики</a>
                         </div>
@@ -174,7 +198,7 @@
                     <div class="detail-block__subtitle orange-text">Варианты оплаты</div>
                     <div class="detail-block__info-list ">
                         <div class="detail-block__info-item info-item">
-                            <div class="info-item__text">
+                            <div class="info-item__icon">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path d="M19 5L5 19" stroke="#E25B26" stroke-width="1.5" stroke-linecap="round"
@@ -188,24 +212,40 @@
                                         stroke="#E25B26" stroke-width="1.5" stroke-linecap="round"
                                         stroke-linejoin="round" />
                                 </svg>
+                            </div>
+                            <div class="info-item__text">
                                 Купить в кредит <span class="demibold"> от 907₽/день</span>
                             </div>
                             <div class="info-item__btn"></div>
+                            <div class="info-item__popup">
+                                <div class="info-item__popup-title subtitle">Онлайн-рассрочка</div>
+                                <div class="info-item__text">Выберите способ оплаты «Онлайн-рассрочка» при оформлении
+                                    заказа и заполните заявку. <a href="">Подробнее</a></div>
+                                <div class=" info-item__btn info-item__btn_close"></div>
+                            </div>
                         </div>
                         <div class="detail-block__info-item info-item">
-                            <div class="info-item__text">
+                            <div class="info-item__icon">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
                                         d="M17.4489 19.0087C17.7298 19.3131 18.2043 19.3321 18.5087 19.0511C18.8131 18.7702 18.8321 18.2957 18.5511 17.9913L17.4489 19.0087ZM12 12H11.25C11.25 12.1885 11.321 12.3702 11.4489 12.5087L12 12ZM12 20.25C7.44365 20.25 3.75 16.5563 3.75 12H2.25C2.25 17.3848 6.61522 21.75 12 21.75V20.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75V2.25C6.61522 2.25 2.25 6.61522 2.25 12H3.75ZM12 3.75C16.5563 3.75 20.25 7.44365 20.25 12H21.75C21.75 6.61522 17.3848 2.25 12 2.25V3.75ZM20.25 12C20.25 16.5563 16.5563 20.25 12 20.25V21.75C17.3848 21.75 21.75 17.3848 21.75 12H20.25ZM18.5511 17.9913L12.5511 11.4913L11.4489 12.5087L17.4489 19.0087L18.5511 17.9913ZM12.75 12V3H11.25V12H12.75ZM12 12.75H21V11.25H12V12.75Z"
                                         fill="#E25B26" />
                                 </svg>
+                            </div>
+                            <div class="info-item__text">
                                 Купить в кредит <span class="demibold"> от 907₽/день</span>
                             </div>
                             <div class="info-item__btn"></div>
+                            <div class="info-item__popup">
+                                <div class="info-item__popup-title subtitle">Онлайн-рассрочка</div>
+                                <div class="info-item__text">Выберите способ оплаты «Онлайн-рассрочка» при оформлении
+                                    заказа и заполните заявку. <a href="">Подробнее</a></div>
+                                <div class=" info-item__btn info-item__btn_close"></div>
+                            </div>
                         </div>
                         <div class="detail-block__info-item info-item">
-                            <div class="info-item__text">
+                            <div class="info-item__icon">
                                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -213,9 +253,17 @@
                                         stroke="#E25B26" stroke-width="1.5" stroke-linecap="round"
                                         stroke-linejoin="round" />
                                 </svg>
+                            </div>
+                            <div class="info-item__text">
                                 Купить в кредит <span class="demibold"> от 907₽/день</span>
                             </div>
                             <div class="info-item__btn"></div>
+                            <div class="info-item__popup">
+                                <div class="info-item__popup-title subtitle">Онлайн-рассрочка</div>
+                                <div class="info-item__text">Выберите способ оплаты «Онлайн-рассрочка» при оформлении
+                                    заказа и заполните заявку. <a href="">Подробнее</a></div>
+                                <div class=" info-item__btn info-item__btn_close"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
