--- a/garden-shop/release/css/main.css
+++ b/garden-shop/release/css/main.css
@@ -19,7 +19,7 @@ body {
   font-weight: 600;
   font-size: 28px;
   line-height: 40px;
-  color: #3f3f3f;
+  color: #212121;
   margin-bottom: 30px;
 }
 
@@ -338,6 +338,10 @@ body {
     padding: 40px 0;
   }
 }
+.body-wrapper {
+  overflow-x: clip;
+}
+
 .container {
   width: 1560px;
   max-width: 100%;
@@ -501,6 +505,10 @@ body {
 .slider-navigation_outside {
   left: -50px;
   width: calc(100% + 100px);
+}
+.slider-navigation .swiper-button-disabled {
+  opacity: 0.5;
+  cursor: default;
 }
 
 .rating-stars {
@@ -764,19 +772,95 @@ body {
   display: flex;
   justify-content: space-between;
   gap: 20px;
+  position: relative;
+  padding-left: 34px;
 }
 .info-item__btn {
   width: 24px;
   height: 24px;
-  background-image: url(../../images/icons/Info.svg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
+  mask-image: url(../images/icons/Info.svg);
+  mask-position: center;
+  mask-repeat: no-repeat;
+  mask-size: contain;
+  background-color: #c9c8d3;
+  cursor: pointer;
 }
-.info-item__text {
+.info-item__btn_close {
+  mask-image: url(../images/icons/Close_MD.svg);
+  background-color: #303030;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+.info-item__icon {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 24px;
+  height: 24px;
+}
+.info-item__popup {
+  position: absolute;
+  bottom: 100%;
+  right: 0;
+  width: 100%;
+  max-width: 400px;
+  padding: 15px;
+  background: #ffffff;
+  border: 1px solid #ebebeb;
+  border-radius: 5px;
+  transition: all ease 0.5s;
+  opacity: 0;
+  pointer-events: none;
+}
+.info-item__popup-title {
+  margin-bottom: 15px;
+}
+.info-item__text a {
+  text-decoration: underline;
+}
+.info-item_open .info-item__popup {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.specification-row {
   display: flex;
-  align-items: center;
-  gap: 10px;
+  justify-content: space-between;
+  align-items: flex-end;
+  gap: 20px;
+  position: relative;
+  z-index: 1;
+}
+.specification-row:last-child {
+  margin-bottom: 0;
+}
+.specification-row::after {
+  display: block;
+  content: "";
+  width: 100%;
+  height: 18px;
+  position: absolute;
+  bottom: 5px;
+  left: 0;
+  background-image: url(../images/icons/doted-line.svg);
+  background-position: center;
+  background-size: contain;
+  z-index: -1;
+}
+.specification-row__key {
+  max-width: 230px;
+  width: 100%;
+  padding-right: 5px;
+}
+.specification-row__key-text, .specification-row__value-text {
+  background-color: #fff;
+  display: inline;
+}
+.specification-row__value {
+  background-color: #fff;
+  width: 240px;
+  padding-left: 5px;
 }
 
 @media (max-width: 1650px) {
