--- a/garden-shop/dev/components/additional/additional.scss
+++ b/garden-shop/dev/components/additional/additional.scss
@@ -114,3 +114,11 @@
         }
     }
 }
+
+@media (max-width: 768px) {
+    .additional {
+        & .card {
+            width: 100%;
+        }
+    }
+}
