--- a/garden-shop/dev/components/card/card.html
+++ b/garden-shop/dev/components/card/card.html
@@ -61,6 +61,6 @@
             </div>
             <div class="card__old-price caption">369 900 ₽</div>
         </div>
-        <div class="card__basket"></div>
+        <div class="card__basket card-basket"></div>
     </div>
 </div>
