--- a/garden-shop/dev/components/default-slider/default-slider.html
+++ b/garden-shop/dev/components/default-slider/default-slider.html
@@ -32,7 +32,7 @@
                                 </div>
                                 <div class="card__old-price caption">369 900 ₽</div>
                             </div>
-                            <div class="card__basket"></div>
+                            <div class="card__basket card-basket"></div>
                         </div>
                     </div>
                 </div>
@@ -83,7 +83,7 @@
                                 </div>
                                 <div class="card__old-price caption">369 900 ₽</div>
                             </div>
-                            <div class="card__basket"></div>
+                            <div class="card__basket card-basket"></div>
                         </div>
                     </div>
                 </div>
@@ -151,7 +151,7 @@
                                 </div>
                                 <div class="card__old-price caption">369 900 ₽</div>
                             </div>
-                            <div class="card__basket"></div>
+                            <div class="card__basket card-basket"></div>
                         </div>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
                                 </div>
                                 <div class="card__old-price caption">369 900 ₽</div>
                             </div>
-                            <div class="card__basket"></div>
+                            <div class="card__basket card-basket"></div>
                         </div>
                     </div>
                 </div>
@@ -217,7 +217,7 @@
                                 </div>
                                 <div class="card__old-price caption">369 900 ₽</div>
                             </div>
-                            <div class="card__basket"></div>
+                            <div class="card__basket card-basket"></div>
                         </div>
                     </div>
                 </div>
@@ -313,7 +313,7 @@
                                                 </div>
                                                 <div class="card__old-price caption">369 900 ₽</div>
                                             </div>
-                                            <!-- <div class="card__basket"></div> -->
+                                            <!-- <div class="card__basket card-basket"></div> -->
                                         </div>
                                     </div>
                                 </div>
