--- a/garden-shop/dev/components/default-slider/default-slider.scss
+++ b/garden-shop/dev/components/default-slider/default-slider.scss
@@ -10,3 +10,11 @@
         position: static;
     }
 }
+
+@media (max-width: 570px) {
+    .default-slider {
+        & .card {
+            height: auto;
+        }
+    }
+}
