--- a/garden-shop/dev/components/review/review.scss
+++ b/garden-shop/dev/components/review/review.scss
@@ -51,6 +51,21 @@
         display: flex;
         flex-direction: column;
         gap: 15px;
+        max-height: 275px;
+        overflow-y: auto;
+        padding-bottom: 1px;
+        &::-webkit-scrollbar {
+            width: 5px;
+            background: #c9c8d3;
+            border-radius: 5px;
+        }
+        &::-webkit-scrollbar-thumb {
+            background: #8a8894;
+            border-radius: 5px;
+        }
+        &::after {
+            display: none;
+        }
     }
     &__desc-title {
         margin-bottom: 5px;
@@ -58,24 +73,6 @@
     &__controls {
         display: flex;
         margin-top: auto;
-    }
-    & .read-more {
-        &__text {
-            overflow-y: auto;
-            padding-bottom: 1px;
-            &::-webkit-scrollbar {
-                width: 5px;
-                background: #c9c8d3;
-                border-radius: 5px;
-            }
-            &::-webkit-scrollbar-thumb {
-                background: #8a8894;
-                border-radius: 5px;
-            }
-            &::after {
-                display: none;
-            }
-        }
     }
 }
 
