--- a/garden-shop/release/components/header/header.html
+++ b/garden-shop/release/components/header/header.html
@@ -30,7 +30,7 @@
 	<div class="body-wrapper">
 		<header class="header">
 			<div class="header__line">
-				<img src="../../images/top-banner.png" alt="img">
+				<img src="./images/top-banner.png" alt="img">
 			</div>
 			<div class="container">
 				<div class="header__wrapper">
