--- a/garden-shop/dev/components/footer/footer.html
+++ b/garden-shop/dev/components/footer/footer.html
@@ -167,6 +167,13 @@
     <div class="popup-info__close"></div>
 </div>
 
+<div class="popup" id="popup-quiz">
+    <div class="popup__title orange-bg white-text demibold">Подбор трактора</div>
+    <div class="popup__body">
+        @@include('../quiz/quiz.html')
+    </div>
+</div>
+
 </body>
 
 </html>
