--- a/garden-shop/dev/components/advantages/advantages.scss
+++ b/garden-shop/dev/components/advantages/advantages.scss
@@ -1,29 +1,9 @@
 .advantages {
-    &__wrapper {
-        display: flex;
-        gap: 30px;
-        flex-wrap: wrap;
-        flex-direction: column;
-        max-height: 225px;
-        overflow-x: auto;
-        padding-bottom: 10px;
-        &::-webkit-scrollbar {
-            height: 5px;
-            background: #c9c8d3;
-            border-radius: 5px;
-        }
-        &::-webkit-scrollbar-thumb {
-            background: #8a8894;
-            border-radius: 5px;
-        }
-    }
     &__item {
         background: #ffffff;
         border: 1px solid #ebebeb;
         border-radius: 5px;
-        width: 360px;
         height: 90px;
-        max-width: 100%;
         display: flex;
         align-items: center;
         padding-left: 10px;
@@ -42,6 +22,12 @@
             }
         }
     }
+    &__slider {
+        height: 210px;
+    }
+    &__slide {
+        height: calc((100% - 30px) / 2) !important;
+    }
     &__icon {
         & path,
         & circle {
@@ -51,15 +37,6 @@
             transition: all ease 0.5s;
             transform: rotate(90deg) translate(-10px, 5px) scale(0.5);
             transform-origin: center;
-        }
-    }
-}
-
-@media (max-width: 570px) {
-    .advantages {
-        &__wrapper {
-            gap: 15px;
-            row-gap: 10px;
         }
     }
 }
