--- a/garden-shop/dev/components/catalog/catalog.scss
+++ b/garden-shop/dev/components/catalog/catalog.scss
@@ -99,6 +99,12 @@
     &__filter-mobile-title {
         display: none;
     }
+    & .range-slider {
+        & .rs-scale span ins {
+            font-size: 0;
+            height: 0;
+        }
+    }
 }
 
 .accordion_v2 {
