--- a/garden-shop/dev/components/sidebar/sidebar.scss
+++ b/garden-shop/dev/components/sidebar/sidebar.scss
@@ -1,17 +1,91 @@
 .sidebar {
+    position: relative;
+    z-index: 5;
     &__list {
         display: flex;
         flex-direction: column;
-        gap: 15px;
+        gap: 10px;
     }
     &__link {
         display: flex;
         gap: 15px;
         align-items: center;
+        padding: 5px 0;
     }
     &__link-icon {
         display: block;
         width: 24px;
         height: 22px;
+    }
+    &__item {
+        &:hover .sidebar {
+            &__link {
+                color: #e25b26;
+                & svg path {
+                    fill: #e25b26;
+                }
+            }
+            &__sublist {
+                opacity: 1;
+                pointer-events: all;
+            }
+        }
+    }
+    &__sublist {
+        padding: 40px 50px;
+        background-color: #fff;
+        border: 1px solid #c9c8d3;
+        border-radius: 5px;
+        position: absolute;
+        left: 100%;
+        top: 0;
+        width: 100vw;
+        max-width: 1300px;
+        display: flex;
+        gap: 30px;
+        justify-content: space-between;
+        pointer-events: none;
+        transition: all ease 0.5s;
+        opacity: 0;
+    }
+    &__filter-list {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 30px;
+        width: 100%;
+        max-width: 1090px;
+    }
+    &__filter-title {
+        margin-bottom: 15px;
+        display: block;
+    }
+    &__filter-sublist {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+    &__brand-list {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+    &__brand-link {
+        display: block;
+        width: 90px;
+        height: 30px;
+        & img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            object-position: center;
+        }
+    }
+}
+
+@media (max-width: 1550px) {
+    .sidebar {
+        &__sublist {
+            width: 80vw;
+        }
     }
 }
