--- a/garden-shop/release/components/line-form/line-form.html
+++ b/garden-shop/release/components/line-form/line-form.html
@@ -6,7 +6,7 @@
                     <div class="line-form__info-title subtitle">Какой трактор нужен именно вам?</div>
                     <div class="line-form__info-text">Наш тест поможет в выборе оборудования</div>
                 </div>
-                <a href="" class="line-form__btn btn">Пройти тест</a>
+                <a href="#popup-quiz" data-fancybox class="line-form__btn btn">Пройти тест</a>
             </div>
             <form class="line-form__item line-form__form orange-bg ">
                 <div class="line-form__title white-text subtitle">Узнайте о новостях и скидках первыми</div>
