--- a/garden-shop/release/components/sidebar/sidebar.css
+++ b/garden-shop/release/components/sidebar/sidebar.css
@@ -1,15 +1,85 @@
+.sidebar {
+  position: relative;
+  z-index: 5;
+}
 .sidebar__list {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 10px;
 }
 .sidebar__link {
   display: flex;
   gap: 15px;
   align-items: center;
+  padding: 5px 0;
 }
 .sidebar__link-icon {
   display: block;
   width: 24px;
   height: 22px;
+}
+.sidebar__item:hover .sidebar__link {
+  color: #e25b26;
+}
+.sidebar__item:hover .sidebar__link svg path {
+  fill: #e25b26;
+}
+.sidebar__item:hover .sidebar__sublist {
+  opacity: 1;
+  pointer-events: all;
+}
+.sidebar__sublist {
+  padding: 40px 50px;
+  background-color: #fff;
+  border: 1px solid #c9c8d3;
+  border-radius: 5px;
+  position: absolute;
+  left: 100%;
+  top: 0;
+  width: 100vw;
+  max-width: 1300px;
+  display: flex;
+  gap: 30px;
+  justify-content: space-between;
+  pointer-events: none;
+  transition: all ease 0.5s;
+  opacity: 0;
+}
+.sidebar__filter-list {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 30px;
+  width: 100%;
+  max-width: 1090px;
+}
+.sidebar__filter-title {
+  margin-bottom: 15px;
+  display: block;
+}
+.sidebar__filter-sublist {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.sidebar__brand-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.sidebar__brand-link {
+  display: block;
+  width: 90px;
+  height: 30px;
+}
+.sidebar__brand-link img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
+}
+
+@media (max-width: 1550px) {
+  .sidebar__sublist {
+    width: 80vw;
+  }
 }
